# AED

./: .clang-tidy  .gitignore
Programacao descomplicada/Lista 1 - Variaveis e Expressoes/: CMakeLists.txt
Programacao descomplicada/Lista 1 - Variaveis e Expressoes/src/: ex1.c  ex2.c
Programacao descomplicada/Lista 10 - Alocacao Dinamica/src/: CMakeLists.txt  ex1.c  ex2.c
Programacao descomplicada/Lista 11 - Arquivos/: CMakeLists.txt
Programacao descomplicada/Lista 11 - Arquivos/src/: ex1.c  ex2.c
Tarefas/Agenda PBuffer/: CMakeLists.txt  README.md
Tarefas/Agenda PBuffer/include/: agenda.h  arena.h  common.h  darray.h  locals_stack.h  validators.h
Tarefas/Agenda PBuffer/src/: CMakeLists.txt  agenda.c  arena.c  darray.c  locals_stack.c  main.c  validators.c
advent of code/day 1/: CMakeLists.txt  part1.c
advent of code/day 2/: CMakeLists.txt
advent of code/day 2/src/: CMakeLists.txt  darray.h  part1.c  part2.c
advent of code/day 3/src/: part1.c  part2.c
advent of code/day 4/: README.md
advent of code/day 4/src/: part2.c
advent of code/day I/: .clang-tidy  README.md  part2.c
advent of code/day II/: README.md
advent of code/day II/src/: darray.c
advent of code/day III/src/: CMakeLists.txt  part1.c
advent of code/day IV/: README.md
advent of code/day IV/src/: part1.c
advent of code/day V/src/: darray.h  hashmap.c  part1.c  part2.c
advent of code/day VI/: CMakeLists.txt  README.md
advent of code/day VI/src/: CMakeLists.txt  darray.c  hashmap.h  part1.c  part2.c
leetcode/easy/Best Time to Buy and Sell Stock/src/: main.c  solution.c  solution.h
leetcode/easy/Check If a Word Occurs As a Prefix of Any Word in a Sentence/: CMakeLists.txt
leetcode/easy/Check If a Word Occurs As a Prefix of Any Word in a Sentence/src/: main.c  solution.c  solution.h
leetcode/easy/Check if Array Is Sorted and Rotated/src/: main.c  solution.c  solution.h
leetcode/easy/Find the Index of the First Occurrence in a String/src/: main.c  solution.c  solution.h
leetcode/easy/Longest Strictly Increasing or Strictly Decreasing Subarray/src/: main.c  solution.c  solution.h
leetcode/easy/Majority Element/src/: main.c  solution.c  solution.h
leetcode/easy/Merge Sorted Array/: CMakeLists.txt
leetcode/easy/Merge Sorted Array/src/: main.c  solution.c  solution.h
leetcode/easy/Number of 1 Bits/src/: main.c  solution.c  solution.h
leetcode/easy/Palindrome Number/src/: CMakeLists.txt  main.c  solution.c  solution.h
leetcode/easy/Pascal's Triangle/: CMakeLists.txt  README.md
leetcode/easy/Pascal's Triangle/src/: main.c  solution.c  solution.h
leetcode/easy/Remove Duplicates from Sorted Array/src/: main.c  solution.c
leetcode/easy/Remove Element/src/: main.c  solution.c  solution.h
leetcode/easy/Reverse Bits/src/: main.c  solution.c  solution.h
leetcode/easy/Two Sum/src/: main.c  solution.c  solution.h
leetcode/easy/Valid Parentheses/src/: main.c  solution.c  solution.h
leetcode/medium/Add Two Numbers/src/: CMakeLists.txt  main.c  solution.c  solution.h
leetcode/medium/Adding Spaces to a String/.cache/clangd/index/: __stdarg___gnuc_va_list.h.9842BA5DA833A9B2.idx  __stddef_header_macro.h.1B5776C01253488C.idx  __stddef_max_align_t.h.73CA2FF4B5FCF885.idx  (+24 more)
leetcode/medium/Adding Spaces to a String/src/: main.c  solution.c  solution.h
leetcode/medium/Best Time to Buy and Sell Stock II/src/: main.c  solution.c
leetcode/medium/Flip Columns For Maximum Number of Equal Rows/src/: CMakeLists.txt  main.c  solution.c  solution.h
leetcode/medium/Integer to Roman/src/: main.c  solution.c  solution.h
leetcode/medium/Jump Game/src/: main.c  solution.c  solution.h
leetcode/medium/Longest Palindromic Substring/: CMakeLists.txt
leetcode/medium/Longest Palindromic Substring/src/: main.c  solution.c  solution.h
leetcode/medium/Longest Substring Without Repeating Characters/src/: main.c  solution.c  solution.h
leetcode/medium/Make String a Subsequence Using Cyclic Increments/src/: main.c  solution.c  solution.h
leetcode/medium/Maximum Average Pass Ratio/: .gitignore  BADCASE.py  CMakeLists.txt  README.md  benchmark.py
leetcode/medium/Maximum Average Pass Ratio/benchmark/: CMakeLists.txt  array_updated.cpp  array_updated.h  best_solution.cpp  best_solution.h  heap_recursive.cpp  heap_recursive.h  inplace.cpp  inplace.h  linkedlist.cpp  linkedlist.h  main.cpp  passed0.cpp  passed0.h  passed1.cpp  passed1.h
leetcode/medium/Maximum Average Pass Ratio/src/: CMakeLists.txt  main.c  solution.c  solution.h
leetcode/medium/Most Frequent Subtree Sum/: README.md  callgrind.out.6153
leetcode/medium/Most Frequent Subtree Sum/src/: main.c  solution.c  solution.h
leetcode/medium/Most Profit Assigning Work/: .gitignore  README.md
leetcode/medium/Most Profit Assigning Work/src/: CMakeLists.txt  main.c  solution.c  solution.h
leetcode/medium/Move Pieces to Obtain a String/src/: CMakeLists.txt  main.c  solution.c  solution.h
leetcode/medium/Remove Duplicates from Sorted Array II/: CMakeLists.txt
leetcode/medium/Remove Duplicates from Sorted Array II/src/: main.c  solution.c  solution.h
leetcode/medium/Reverse Integer/src/: main.c  solution.c  solution.h
leetcode/medium/Rotate Array/: .clang-format
leetcode/medium/Rotate Array/src/: main.c  solution.c  solution.h
leetcode/medium/String to Integer (atoi)/: .clang-format
leetcode/medium/String to Integer (atoi)/src/: main.c  solution.c  solution.h
leetcode/medium/Valid Sudoku/: README.md
leetcode/medium/Valid Sudoku/src/: main.c  solution.c  solution.h
slides/AVL/: avl.c  avl.h
slides/ex2/: .clang-format  .clang-tidy  CMakeLists.txt
slides/ex2/src/: CMakeLists.txt  array.c  array.h  main.c
slides/ex2/tests/: CMakeLists.txt  tests.c
slides/ex3/: .clang-tidy  CMakeLists.txt
slides/ex3/src/: CMakeLists.txt  agenda.c  agenda.h  main.c
slides/ex3/tests/: CMakeLists.txt  tests.c
