cmake_minimum_required(VERSION 3.11)

project(agenda LANGUAGES C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(AGENDA_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(AGENDA_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(AGENDA_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${AGENDA_INSTALL_BIN_DIR})
include_directories(${AGENDA_INSTALL_INCLUDE_DIR})

option(SANITIZER "Ativate -fsanitizer=address" OFF)

add_subdirectory(src)
